--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,13 @@ markdown: kramdown
 permalink: pretty
 
 highlighter: rouge
+
 kramdown:
   input: GFM
   auto_ids: true
   syntax_highlighter: rouge
+  # syntax_highlighter_opts:
+  #     span:
+  #       line_numbers: false
+  #     block:
+  #       line_numbers: true
