--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -1,6 +1,3 @@
-group 'de.fh-rosenheim.wif-prg2'
-version '1.0'
-
 buildscript {
     repositories {
         jcenter()
@@ -16,8 +13,9 @@ apply plugin: 'application'
 apply plugin: 'org.junit.platform.gradle.plugin'
 apply plugin: 'com.github.ben-manes.versions'
 
-sourceCompatibility = 1.8
 
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     jcenter()
